--- a/customer-service-dev.properties
+++ b/customer-service-dev.properties
@@ -1,2 +1,6 @@
 customer.params.x=900
 customer.params.y=500
+
+management.endpoints.web.exposure.include=refresh
+#spring.datasource.url=jdbc:h2:mem:xustomer-db
+#spring.h2.console.enable=true
