--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,5 +1,5 @@
 customer.params.x=88
 customer.params.y=sd88
 management.endpoints.web.exposure.include=refresh
-spring.datasource.url=jdbc:h2:mem:xustomer-db
+spring.datasource.url=jdbc:h2:mem:customer-db
 spring.h2.console.enable=true
