--- a/customer-service.properties
+++ b/customer-service.properties
@@ -2,4 +2,4 @@ customer.params.x=88
 customer.params.y=sd88
 management.endpoints.web.exposure.include=refresh
 spring.datasource.url=jdbc:h2:mem:customer-db
-spring.h2.console.enable=true
+spring.h2.console.enabled=true
