--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,5 +1,11 @@
 customer.params.x=88
 customer.params.y=sd88
 management.endpoints.web.exposure.include=refresh
-spring.datasource.url=jdbc:h2:mem:customer-db
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:customer-db;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Créer les tables automatiquement selon les entités
+spring.jpa.hibernate.ddl-auto=update
