--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,12 +1,10 @@
 customer.params.x=88
 customer.params.y=sd88
-management.endpoints.web.exposure.include=*
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
-spring.datasource.driverClassName=org.h2.Driver
+management.endpoints.web.exposure.include=refresh
+spring.datasource.url=jdbc:h2:mem:customer-db
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Créer les tables automatiquement selon les entités
-spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
