--- a/customer-service.properties
+++ b/customer-service.properties
@@ -3,8 +3,6 @@ customer.params.y=sd88
 management.endpoints.web.exposure.include=refresh
 spring.datasource.url=jdbc:h2:mem:customer-db
 spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.enabled=true
