--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,8 +1,7 @@
 customer.params.x=88
 customer.params.y=sd88
 management.endpoints.web.exposure.include=*
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:customer-db
-spring.datasource.username=sa
+spring.datasource.url=jdbc:postgresql://localhost:5433/customer-db
+spring.datasource.username=postgres
 spring.datasource.password=
-spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
