--- a/customer-service.properties
+++ b/customer-service.properties
@@ -3,5 +3,5 @@ customer.params.y=sd88
 management.endpoints.web.exposure.include=*
 spring.datasource.url=jdbc:postgresql://localhost:5433/customer-db
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
