--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -1,2 +1,4 @@
-inv.params.a=6
-inv.params.b=5
+spring.datasource.url=jdbc:postgresql://localhost:5433/product-db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
