--- a/order-service.properties
+++ b/order-service.properties
@@ -1,2 +1,4 @@
-order.params.o1=86
-order.params.o2=95
+spring.datasource.url=jdbc:postgresql://localhost:5433/order-db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
