--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/product-db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
+management.endpoints.web.exposure.include=*
