--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -3,4 +3,4 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 management.endpoints.web.exposure.include=*
-mes-configs.limitDeProduits= 2
+#mes-configs.limitDeProduits= 2
