--- a/gateway-service.properties
+++ b/gateway-service.properties
@@ -1,2 +1,9 @@
-gate.params.g1=186
-gate.params.g2=2195
+spring.cloud.gateway.routes[0].id=order-service
+spring.cloud.gateway.routes[0].uri=http://localhost:8089
+spring.cloud.gateway.routes[0].predicates[0]=Path=/order/**
+
+spring.cloud.gateway.routes[1].id=inventory-service
+spring.cloud.gateway.routes[1].uri=http://localhost:8087
+spring.cloud.gateway.routes[1].predicates[0]=Path=/product/**
+spring.cloud.gateway.filters[0]=RequestHeaderToRequestUri=Authorization
+management.endpoints.web.exposure.include=*
