--- a/gateway-service.properties
+++ b/gateway-service.properties
@@ -5,5 +5,7 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/order/**
 spring.cloud.gateway.routes[1].id=inventory-service
 spring.cloud.gateway.routes[1].uri=http://localhost:8087
 spring.cloud.gateway.routes[1].predicates[0]=Path=/product/**
-spring.cloud.gateway.filters[0]=RequestHeaderToRequestUri=Authorization
+#spring.cloud.gateway.filters[0]=RequestHeaderToRequestUri=Authorization
 management.endpoints.web.exposure.include=*
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.consul.discovery.enabled=true
