--- a/order-service.properties
+++ b/order-service.properties
@@ -4,4 +4,5 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 management.endpoints.web.exposure.include=*
 
+my-configuration.limitDeOrder = 10
 
