--- a/order-service.properties
+++ b/order-service.properties
@@ -3,6 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 management.endpoints.web.exposure.include=*
+management.endpoint.refresh.enabled=true
 
-my-configuration.limitDeOrder = 10
+my-configuration.limitDeOrder = 20
 
