--- a/order-service.properties
+++ b/order-service.properties
@@ -7,3 +7,16 @@ management.endpoint.refresh.enabled=true
 
 my-configuration.limitDeOrder = 15
 
+
+# Activer Resilience4j pour Feign
+resilience4j.circuitbreaker.instances.productFeign.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.productFeign.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.productFeign.permittedNumberOfCallsInHalfOpenState=5
+resilience4j.circuitbreaker.instances.productFeign.waitDurationInOpenState=10000
+resilience4j.circuitbreaker.instances.productFeign.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.productFeign.slowCallRateThreshold=50
+resilience4j.circuitbreaker.instances.productFeign.slowCallDurationThreshold=2s
+
+# Timeout Feign
+feign.client.config.default.connectTimeout=1000
+feign.client.config.default.readTimeout=1000
