--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -4,3 +4,16 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 management.endpoints.web.exposure.include=*
 #mes-configs.limitDeProduits= 2
+
+# Activer Resilience4j pour Feign
+resilience4j.circuitbreaker.instances.productFeign.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.productFeign.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.productFeign.permittedNumberOfCallsInHalfOpenState=5
+resilience4j.circuitbreaker.instances.productFeign.waitDurationInOpenState=10000
+resilience4j.circuitbreaker.instances.productFeign.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.productFeign.slowCallRateThreshold=50
+resilience4j.circuitbreaker.instances.productFeign.slowCallDurationThreshold=2s
+
+# Timeout Feign
+feign.client.config.default.connectTimeout=1000
+feign.client.config.default.readTimeout=1000
